@@ -4,6 +4,8 @@ Revision history for Perl extension Net::SSLeay.
      Removed unneeded Debian_CPANTS.txt from MANIFEST.
      Fixed incorrect documentation about the best way to callsample code about
      calling CTX_set_options.
+     Fixed problem that caused Undefined subroutine utf8::encode @
+     t/local/33_x509_create_cert.t (on perl 5.6.2)
 
 1.47 2012-04-04
      Fixed overlong lines in pod, patch from Salvatore Bonaccorso, Debian Perl
